# vaultcli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: actions.rs  clipboard.rs  config.rs  credentials.rs  input.rs  mod.rs
src/crypto/: dek.rs  encryption.rs  kdf.rs  key_hierarchy.rs  mod.rs  password_gen.rs  totp.rs
src/db/: connection.rs  mod.rs  models.rs  queries.rs  schema.rs
src/input/: handler.rs  keymap.rs  mod.rs  modes.rs
src/ui/: mod.rs  renderer.rs
src/ui/components/: detail.rs  form.rs  help.rs  list.rs  logs.rs  mod.rs  popup.rs  statusline.rs
src/vault/: audit.rs  credential.rs  manager.rs  mod.rs  project.rs  search.rs
